--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,116 @@ button {
   background-color: white;
   border: 2px solid #d1d7db;
 }
+
+/* LIST */
+.space {
+  margin: 40px 0 10px 0;
+}
+
+main h3 {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+main h3::before {
+  content: "\25BC";
+  margin-right: 5px;
+  font-size: 10px;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  font-size: 18px;
+  margin: 15px;
+}
+
+/* editorial */
+.editorial::before {
+  content: "\2713";
+  padding: 2px 6px;
+  text-align: center;
+  border-radius: 70%;
+  border: 1px solid #61d4c0;
+  color: #61d4c0;
+  margin-right: 10px;
+}
+
+.editorial::after {
+  content: "Editorial";
+  font-size: 14px;
+  padding: 6px 10px;
+  text-align: center;
+  border-radius: 15px;
+  color: white;
+  background-color: #09a9ed;
+  margin-left: 10px;
+}
+
+/* mobile */
+.mobile::before {
+  content: "\2713";
+  padding: 2px 6px;
+  text-align: center;
+  border-radius: 70%;
+  border: 1px solid #61d4c0;
+  color: #61d4c0;
+  margin-right: 10px;
+}
+
+.mobile::after {
+  content: "Q1 Goals";
+  font-size: 14px;
+  padding: 6px 10px;
+  text-align: center;
+  border-radius: 15px;
+  color: white;
+  background-color: #ab5de6;
+  margin-left: 10px;
+}
+
+/* interview */
+.interview::before {
+  content: "\2715";
+  padding: 2px 6px;
+  text-align: center;
+  border-radius: 70%;
+  border: 1px solid #ff4242;
+  color: #ff4242;
+  margin-right: 10px;
+}
+
+.interview::after {
+  content: "Recruting";
+  font-size: 14px;
+  padding: 6px 10px;
+  text-align: center;
+  border-radius: 15px;
+  color: white;
+  background-color: #2cc6ab;
+  margin-left: 10px;
+}
+
+/* summit */
+.summit::before {
+  content: "\2713";
+  padding: 2px 6px;
+  text-align: center;
+  border-radius: 70%;
+  border: 1px solid #61d4c0;
+  color: #61d4c0;
+  margin-right: 10px;
+}
+
+.summit::after {
+  content: "Mobile";
+  font-size: 14px;
+  padding: 6px 10px;
+  text-align: center;
+  border-radius: 15px;
+  color: white;
+  background-color: #ff9b00;
+  margin-left: 10px;
+}
